...
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_location_on_black_24dp"
                            android:tint="@color/colorPrimary"/>

                        <Spinner
                            android:id="@+id/sp_wilayah"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:text="Anda akan mengambil pesanan anda sendiri, Anda dapat melihat lokasi toko penjual pada detail pesanan"
                        android:layout_margin="10dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/et_detail_alamat"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="match_parent"
                        android:gravity="top"
                        android:maxLines="5"
...

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btn_konfirmasi"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                                android:layout_height="wrap_content"
                                android:text="Total Yang Harus Dibayar :"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                            <TextView
                                android:id="@+id/tv_total_pembayaran"
                                android:layout_marginLeft="5dp"
                                android:textSize="24dp"
                                android:layout_width="0dp"
                                android:layout_weight="0.5"
                                android:layout_height="wrap_content"
                                android:text="Rp. 27.500"
...
